@@ -1,4 +1,7 @@
 2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_02)
+* Remove dropdb, createdb, reload and shutdown admin functions from perldoc.
+  These are deprecated by the C API.
+  Use 'CREATE DATABASE..', 'DROP DATABASE...' and other SQL commands instead.
 * Test rt75353-innodb-lock-timeout.t fails on MySQL Server 5.1 and earlier
   because innodb_lock_wait_timeout is not modifyable per session.
 * Test rt25389-bin-case.t does not work on MySQL Server < 5.1, reported by
